[package]
name = "tt-call"
version = "1.0.6"
authors = ["David Tolnay <dtolnay@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Token tree calling convention"
repository = "https://github.com/dtolnay/tt-call"
documentation = "https://docs.rs/tt-call"
readme = "README.md"
edition = "2018"

[dev-dependencies]
rustversion = "1.0"
syn = { version = "1.0", features = ["extra-traits"] }
trybuild = { version = "1.0.19", features = ["diff"] }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
