[package]
name = "tt-call-tests"
version = "0.0.0"
authors = ["David Tolnay <dtolnay@gmail.com>"]
edition = "2018"
publish = false

[[bin]]
name = "tt-call-tests"
path = "main.rs"

[dev-dependencies]
compiletest = { package = "compiletest_rs", version = "0.3", features = ["stable"] }
tt-call = { path = ".." }
